<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            >

            <ImageView
                android:id="@+id/informantion_image_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@mipmap/information_image"/>

            <TextView
                android:id="@+id/zhanwei_text_view1"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:layout_below="@id/informantion_image_view"
                />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_id"
                android:textColor="@color/colorWhite"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <TextView
                android:id="@+id/information_id_text_view"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/information_id"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="14dp"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_account"
                android:textColor="@color/colorWhite"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <TextView
                android:id="@+id/information_account_text_view"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/information_account"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>

        <Button
            android:id="@+id/change_image_button"
            android:layout_width="130dp"
            android:layout_height="45dp"
           android:layout_weight="1"
            android:background="@color/colorButton"
            android:text="@string/change_information_image_button"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>
        <Button
            android:id="@+id/change_information_name_button"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@color/colorButton"
            android:text="@string/change_information_name"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>

    </LinearLayout>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/my_app_list"
        android:textColor="@color/colorWhite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/information_key_exchange_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>